Fixed bug #23788 (str|preg_replace clober the array elements).

# Should this be MFBed to 4.3 branch?